<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#009575CD"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dayTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:text="@string/today"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="12sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dataTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:text="@string/empty_empty"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="12sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/weatherIV"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_weight="1"
        android:background="#00FFFFFF"
        app:srcCompat="@drawable/a01n"
        android:contentDescription="@string/weather_icon" />

    <TextView
        android:id="@+id/descTV"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ellipsize="marquee"
        android:fontFamily="sans-serif-light"
        android:gravity="center|top"
        android:marqueeRepeatLimit="marquee_forever"
        android:singleLine="true"
        android:text="@string/empty_empty"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="12sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dailyTempTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:text="@string/empty_double"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textStyle="bold" />
</LinearLayout>
