<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/secondary_CL"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/gradient_secondary_day"
    tools:context=".MainActivity">


    <GridView
        android:id="@+id/dailyGV"
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:numColumns="1"
        android:orientation="horizontal"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.robinhood.spark.SparkView
        android:id="@+id/sparkView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dailyGV"
        app:spark_lineColor="#FFFFFFFF" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="32dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sparkView"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/precipitation_probability"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/preProTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/empty"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/windDirTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:text="@string/empty"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/windSpdTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/empty"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:text="@string/hum"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/humidityTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/empty"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:text="@string/uv"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/uvTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/empty"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/precipitation"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/preTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/empty"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView27"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:text="@string/perceived_temperature"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/perTempTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/empty"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView29"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:text="@string/visibility"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/visibilityTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/empty"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView31"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="26dp"
                android:text="@string/pressure"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/pressureTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/empty"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
